--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
               da sua <b><span class="pinkcolor">paixão</span></b> por moda praia e fitness um <b><span
                   class="pinkcolor">negócio lucrativo</span></b>?
             </h2>
-            <button class="btn"><!--Botão Animado-->
+            <a href="./form/" class="btn"><!--Botão Animado-->
               <span>Seja uma revendedora Shallow</span>
-            </button>
+            </a>
             <span class="elementFlex">Clique no botão acima</span>
           </div>
         </div><!--Container Home-->
