--- a/form/index.html
+++ b/form/index.html
@@ -41,7 +41,7 @@
             <button type="submit" class="btn" id="submit-btn">Concluir</button>
           </div>
         </div>
-        <div id="error-message" class="error-message" style="display: none; color: red; margin-top: 10px; text-align: center;"></div>
+        <div id="error-message" class="error-message" style="display: none; color: red; margin-top: 10px; text-align: center; background-color: rgba(242, 242, 242, 0.5); border-radius: 12px;"></div>
       </form>
     </div>
   </section>
