feature,corrections,optimize

--- a/form/index.html
+++ b/form/index.html
@@ -81,7 +81,7 @@
       if (error) {
         throw error;
       } else {
-        window.location.href = '../thanks/index.html';
+        window.location.href = '../thanks/';
       }
     } catch (error) {
       console.error('Erro:', error);
