--- a/thanks/index.html
+++ b/thanks/index.html
@@ -13,6 +13,12 @@
 <body>
     <section class="thanks">
         <div class="centro elementFlex">
+            <a href="../" class="button"><span class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" id="Filled" viewBox="0 0 24 24" width="16" height="16">
+                        <path fill="#fff"
+                            d="M15,7H10.17V5.414A2,2,0,0,0,6.756,4L.876,9.879a3,3,0,0,0,0,4.242L6.756,20a2,2,0,0,0,3.414-1.414V17H16a6.006,6.006,0,0,1,6,6,1,1,0,0,0,2,0V16A9.01,9.01,0,0,0,15,7Z" />
+                    </svg>
+                </span>Voltar à página inicial</a>
             <div class="image">
                 <img src="../assets/images/logo-shallow-allwhite-resized.png" alt="Logo Shallow Beachwear">
             </div>
@@ -21,9 +27,9 @@
                 <p>Em breve nossa equipe de atendimento entrará em contato com você. <br> Se desejar, fale conosco agora
                     mesmo:
                 </p>
-                <a href="https://wa.me/555191831210" class="button"><span class="icon"><i class="fi fi-brands-whatsapp"></i></span>Fale Conosco</a>
+                <a href="https://wa.me/555191831210" class="button"><span class="icon"><i
+                            class="fi fi-brands-whatsapp"></i></span>Fale Conosco</a>
             </div>
-            
         </div>
     </section>
 </body>
