--- a/index.html
+++ b/index.html
@@ -3,6 +3,34 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <!-- Tags básicas de SEO -->
+  <meta name="description"
+    content="Torne-se uma revendedora Shallow Beachwear e conquiste sua independência financeira. Lucre 100% em cada venda com a maior marca de moda praia e fitness do Brasil. Comece agora!">
+  <meta name="keywords"
+    content="revendedora shallow, moda praia, moda fitness, revenda de roupas, renda extra, independência financeira">
+
+  <!-- Tags Open Graph básicas -->
+  <meta property="og:title" content="Seja Revendedora Shallow | Lucre 100% em Cada Venda">
+  <meta property="og:description"
+    content="Transforme sua vida revendendo a marca que mais cresce no Brasil. Ganhe R$5.000 ou mais por mês com moda praia e fitness.">
+  <meta property="og:site_name" content="Shallow Beachwear">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://revendedoras.shallow.com.br">
+  <meta property="og:locale" content="pt_BR">
+
+  <!-- Tags para imagem de compartilhamento -->
+  <meta property="og:image" content="https://revendedoras.shallow.com.br/assets/images/og-share-img.svg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Seja uma Revendedora Shallow Beachwear - Moda Praia e Fitness">
+
+  <!-- Tags adicionais recomendadas -->
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Shallow Beachwear">
+  <link rel="canonical" href="https://revendedoras.shallow.com.br">
+
+  <!--Links para o projeto-->
   <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./assets/css/pages/index/index.css">
   <link rel="stylesheet" href="./assets/css/pages/index/partials/responsive.css">
@@ -10,7 +38,6 @@
     href='https://cdn-uicons.flaticon.com/2.6.0/uicons-solid-straight/css/uicons-solid-straight.css'>
   <script src="https://kit.fontawesome.com/3449d8e4b5.js" crossorigin="anonymous"></script>
   <title>Seja uma Revendedora | Shallow Beachwear</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -18,15 +45,27 @@
     <section class="home"><!--Página Inicial Home-->
       <div class="centro"><!--centro-->
         <header>
-          <div class="logo"><img src="./assets/images/Design sem nome (2) (1).png" alt="Logo Shallow Beachwear"></div>
+          <div class="logo">
+            <img
+            src="./assets/images/Design sem nome (2) (1).png"
+            alt="Logo Shallow Beachwear"
+            width="135"
+            height="135"
+            decoding="async">
+          </div>
         </header>
         <div class="container-home desktop-display"><!--Container Home-->
           <div class="container-video">
             <div class="video-box">
               <div class="video-iframe">
-                <iframe src="https://www.youtube.com/embed/GITa0sOs05Q" title="YouTube video player" frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen>
+                <iframe 
+                src="https://www.youtube.com/embed/GITa0sOs05Q"
+                title="YouTube video player" 
+                width="560"
+                height="315"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
                 </iframe>
               </div>
             </div>
@@ -58,7 +97,12 @@
           <div class="container-video">
             <div class="video-box">
               <div class="video-iframe">
-                <iframe src="https://www.youtube.com/embed/GITa0sOs05Q" title="YouTube video player" frameborder="0"
+                <iframe 
+                  src="https://www.youtube.com/embed/GITa0sOs05Q" 
+                  title="YouTube video player" 
+                  width="560"
+                  height="315"
+                  frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen>
                 </iframe>
@@ -168,7 +212,13 @@
           <li class="case elementFlex">
             <div class="video-container">
               <div class="video-iframe">
-                <iframe src="https://www.youtube.com/embed/ATJSpTt_TSs" title="YouTube video player" frameborder="0"
+                <iframe
+                  src="https://www.youtube.com/embed/ATJSpTt_TSs"
+                  loading="lazy"
+                  title="YouTube video player" 
+                  width="560"
+                  height="315"
+                  frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen>
                 </iframe>
@@ -188,7 +238,12 @@
     </section>
 
     <section class="pq"><!--Página 5 Para quem é e para quem não é-->
-      <img class="divisao-rasgo" src="./assets/images/fundo-papelrosa-rasgo.svg" alt="papel rosa rasgado">
+      <img
+        src="./assets/images/fundo-papelrosa-rasgo.svg"
+        alt="papel rosa rasgado"
+        class="divisao-rasgo"
+        loading="lazy"
+        decoding="async">
       <div class="centro">
         <h1 class="whitecolor elementFlex title">Você sonha com <span class="bg-text">liberdade financeira</span> e
           <span class="bg-text">realização profissional</span>?
@@ -232,7 +287,14 @@
     </section><!--Página 5 Para quem é e para quem não é-->
 
     <section class="como-ser elementFlex"><!--Página 6 Como ser Revendedora-->
-      <img src="./assets/images/pincelado-rosa.png" alt="Mancha de Tinta" class="paint-stain">
+      <img
+        src="./assets/images/pincelado-rosa.png"
+        alt="Mancha de Tinta"
+        class="paint-stain"
+        loading="lazy"
+        decoding="async"
+        width="500"
+        height="auto">
       <div class="centro">
         <div class="introducao">
           <h1>Como se tornar uma revendedora Shallow?</h1>
@@ -356,16 +418,40 @@
 
                 <!--Slides images-->
                 <div class="slide first">
-                  <img src="./assets/images/Vanusa-comfundo-praia-01.jpeg" alt="Biquini Moda Praia">
+                  <img
+                    src="./assets/images/Vanusa-comfundo-praia-01.jpeg"
+                    alt="Biquini Moda Praia"
+                    loading="lazy"
+                    decoding="async"
+                    width="400"
+                    height="400">
                 </div>
                 <div class="slide">
-                  <img src="./assets/images/Vanusa-comfundo-praia-02.jpeg" alt="Biquini Moda Praia">
+                  <img
+                    src="./assets/images/Vanusa-comfundo-praia-02.jpeg"
+                    alt="Biquini Moda Praia"
+                    loading="lazy"
+                    decoding="async"
+                    width="400"
+                    height="400">
                 </div>
                 <div class="slide">
-                  <img src="./assets/images/Vanusa-comfundo-praia-03.jpeg" alt="Biquini Moda Praia">
+                  <img
+                    src="./assets/images/Vanusa-comfundo-praia-03.jpeg"
+                    alt="Biquini Moda Praia"
+                    loading="lazy"
+                    decoding="async"
+                    width="400"
+                    height="400">
                 </div>
                 <div class="slide">
-                  <img src="./assets/images/Vanusa-comfundo-praia-04.jpeg" alt="Biquini Moda Praia">
+                  <img
+                    src="./assets/images/Vanusa-comfundo-praia-04.jpeg"
+                    alt="Biquini Moda Praia"
+                    loading="lazy"
+                    decoding="async"
+                    width="400"
+                    height="400">
                 </div>
                 <!--End Slide images-->
 
@@ -400,16 +486,40 @@
 
                 <!--Slides images-->
                 <div class="slide first">
-                  <img src="./assets/images/Vanusa-comfundo-fitness-01.jpeg" alt="Top Moda Fitness">
+                  <img
+                    src="./assets/images/Vanusa-comfundo-fitness-01.jpeg"
+                    alt="Top Moda Fitness"
+                    loading="lazy"
+                    decoding="async"
+                    width="400"
+                    height="400">
                 </div>
                 <div class="slide">
-                  <img src="./assets/images/Vanusa-comfundo-fitness-02.jpeg" alt="Top Moda Fitness">
+                  <img
+                    src="./assets/images/Vanusa-comfundo-fitness-02.jpeg"
+                    alt="Top Moda Fitness"
+                    loading="lazy"
+                    decoding="async"
+                    width="400"
+                    height="400">
                 </div>
                 <div class="slide">
-                  <img src="./assets/images/Vanusa-comfundo-fitness-03.jpeg" alt="Top Moda Fitness">
+                  <img
+                    src="./assets/images/Vanusa-comfundo-fitness-03.jpeg"
+                    alt="Top Moda Fitness"
+                    loading="lazy"
+                    decoding="async"
+                    width="400"
+                    height="400">
                 </div>
                 <div class="slide">
-                  <img src="./assets/images/Vanusa-comfundo-fitness-02.jpeg" alt="Top Moda Fitness">
+                  <img
+                    src="./assets/images/Vanusa-comfundo-fitness-02.jpeg"
+                    alt="Top Moda Fitness"
+                    loading="lazy"
+                    decoding="async"
+                    width="400"
+                    height="400">
                 </div>
                 <!--End Slide images-->
 
@@ -449,7 +559,7 @@
           <label for="abrir-question-1" class="faq-item active-1"><!--PERGUNTA 1-->
             <p>Preciso pagar alguma taxa de adesão para começar?</p><i class="fa-solid fa-chevron-right"></i>
           </label>
-          <div class="faq-answer-1 resposta">
+          <div class="faq-answer-1 resposta faq-answer">
             <p>Sim, trabalhamos com empresas de diversos tamanhos e setores. Adaptamos nossas estratégias
               para atender às necessidades específicas de cada cliente, seja uma pequena empresa local ou
               uma grande corporação.
@@ -460,7 +570,7 @@
             <p>É necessário comprar um estoque inicial? Se sim, qual o valor mínimo?</p><i
               class="fa-solid fa-chevron-right"></i>
           </label>
-          <div class="faq-answer-2 resposta">
+          <div class="faq-answer-2 resposta faq-answer">
             <p>Cada projeto é tratado de forma única, começando com uma análise detalhada das necessidades
               do cliente. Desenvolvemos soluções sob medida, seja no design de um site, na criação de uma
               campanha de tráfego pago ou na implementação de estratégias de SEO. Nosso objetivo é
@@ -473,7 +583,7 @@
             <p>A Shallow oferece algum suporte para as revendedoras, como treinamentos ou materiais de venda?</p><i
               class="fa-solid fa-chevron-right"></i>
           </label>
-          <div class="faq-answer-3 resposta">
+          <div class="faq-answer-3 resposta faq-answer">
             <p>O custo dos nossos serviços varia de acordo com as necessidades e complexidade de cada
               projeto. Na Conecta Marketing, acreditamos em oferecer soluções personalizadas que se
               ajustam ao seu orçamento e objetivos específicos. Para fornecer uma estimativa precisa,
@@ -489,7 +599,7 @@
           <label for="abrir-question-4" class="faq-item active-4"><!--PERGUNTA 4-->
             <p>Posso trocar peças que não forem vendidas?</p><i class="fa-solid fa-chevron-right"></i>
           </label>
-          <div class="faq-answer-4 resposta">
+          <div class="faq-answer-4 resposta faq-answer">
             <p>Sim, oferecemos suporte contínuo para garantir que todas as soluções implementadas continuem
               a funcionar corretamente e sejam otimizadas conforme necessário. Isso inclui atualizações,
               manutenção e monitoramento regular para responder rapidamente a qualquer problema ou
@@ -500,7 +610,7 @@
           <label for="abrir-question-5" class="faq-item active-5 margin"><!--PERGUNTA 5-->
             <p>Os produtos possuem garantia?</p><i class="fa-solid fa-chevron-right"></i>
           </label>
-          <div class="faq-answer-5 resposta">
+          <div class="faq-answer-5 resposta faq-answer">
             <p>Sim, oferecemos serviços de gestão de redes sociais que incluem planejamento de conteúdo,
               criação de posts, engajamento com a audiência e análise de desempenho. Nosso objetivo é
               aumentar sua presença nas redes sociais e promover interações significativas com seu
@@ -528,7 +638,14 @@
       </div>
       <div class="line"></div>
       <div class="logo elementFlex">
-        <img class="center-image" src="./assets/images/Design sem nome (2) (1).png" alt="Logo Shallow">
+        <img
+          src="./assets/images/Design sem nome (2) (1).png"
+          alt="Logo Shallow"
+          class="center-image"
+          loading="lazy"
+          decoding="async"
+          width="200"
+          height="auto">
       </div>
       <div class="line"></div>
       <div class="redes">
@@ -549,7 +666,12 @@
   <footer class="rodape mobile-footer">
     <div class="at-rs">
       <div class="logo elementFlex">
-        <img class="center-image" src="./assets/images/Design sem nome (2) (1).png" alt="Logo Shallow">
+        <img
+          src="./assets/images/Design sem nome (2) (1).png"
+          alt="Logo Shallow"
+          class="center-image"
+          loading="lazy"
+          decoding="async">
       </div>
       <div class="atendimento">
         <h1>ATENDIMENTO</h1>
