--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
   <meta property="og:image:alt" content="Seja uma Revendedora Shallow Beachwear - Moda Praia e Fitness">
 
   <!-- Tags adicionais recomendadas -->
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-NS2LVTQB');</script>
+  <!-- End Google Tag Manager -->
   <meta name="robots" content="index, follow">
   <meta name="author" content="Shallow Beachwear">
   <link rel="canonical" href="https://revendedoras.shallow.com.br">
@@ -41,31 +51,27 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NS2LVTQB" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <main>
     <section class="home"><!--Página Inicial Home-->
       <div class="centro"><!--centro-->
         <header>
           <div class="logo">
-            <img
-            src="./assets/images/Design sem nome (2) (1).png"
-            alt="Logo Shallow Beachwear"
-            width="135"
-            height="135"
-            decoding="async">
+            <img src="./assets/images/Design sem nome (2) (1).png" alt="Logo Shallow Beachwear" width="135" height="135"
+              decoding="async">
           </div>
         </header>
         <div class="container-home desktop-display"><!--Container Home-->
           <div class="container-video">
             <div class="video-box">
               <div class="video-iframe">
-                <iframe 
-                src="https://www.youtube.com/embed/GITa0sOs05Q"
-                title="YouTube video player" 
-                width="560"
-                height="315"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
+                <iframe src="https://www.youtube.com/embed/GITa0sOs05Q" title="YouTube video player" width="560"
+                  height="315" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen>
                 </iframe>
               </div>
             </div>
@@ -97,12 +103,8 @@
           <div class="container-video">
             <div class="video-box">
               <div class="video-iframe">
-                <iframe 
-                  src="https://www.youtube.com/embed/GITa0sOs05Q" 
-                  title="YouTube video player" 
-                  width="560"
-                  height="315"
-                  frameborder="0"
+                <iframe src="https://www.youtube.com/embed/GITa0sOs05Q" title="YouTube video player" width="560"
+                  height="315" frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen>
                 </iframe>
@@ -212,13 +214,8 @@
           <li class="case elementFlex">
             <div class="video-container">
               <div class="video-iframe">
-                <iframe
-                  src="https://www.youtube.com/embed/ATJSpTt_TSs"
-                  loading="lazy"
-                  title="YouTube video player" 
-                  width="560"
-                  height="315"
-                  frameborder="0"
+                <iframe src="https://www.youtube.com/embed/ATJSpTt_TSs" loading="lazy" title="YouTube video player"
+                  width="560" height="315" frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen>
                 </iframe>
@@ -238,11 +235,7 @@
     </section>
 
     <section class="pq"><!--Página 5 Para quem é e para quem não é-->
-      <img
-        src="./assets/images/fundo-papelrosa-rasgo.svg"
-        alt="papel rosa rasgado"
-        class="divisao-rasgo"
-        loading="lazy"
+      <img src="./assets/images/fundo-papelrosa-rasgo.svg" alt="papel rosa rasgado" class="divisao-rasgo" loading="lazy"
         decoding="async">
       <div class="centro">
         <h1 class="whitecolor elementFlex title">Você sonha com <span class="bg-text">liberdade financeira</span> e
@@ -287,14 +280,8 @@
     </section><!--Página 5 Para quem é e para quem não é-->
 
     <section class="como-ser elementFlex"><!--Página 6 Como ser Revendedora-->
-      <img
-        src="./assets/images/pincelado-rosa.png"
-        alt="Mancha de Tinta"
-        class="paint-stain"
-        loading="lazy"
-        decoding="async"
-        width="500"
-        height="auto">
+      <img src="./assets/images/pincelado-rosa.png" alt="Mancha de Tinta" class="paint-stain" loading="lazy"
+        decoding="async" width="500" height="auto">
       <div class="centro">
         <div class="introducao">
           <h1>Como se tornar uma revendedora Shallow?</h1>
@@ -418,40 +405,20 @@
 
                 <!--Slides images-->
                 <div class="slide first">
-                  <img
-                    src="./assets/images/Vanusa-comfundo-praia-01.jpeg"
-                    alt="Biquini Moda Praia"
-                    loading="lazy"
-                    decoding="async"
-                    width="400"
-                    height="400">
+                  <img src="./assets/images/Vanusa-comfundo-praia-01.jpeg" alt="Biquini Moda Praia" loading="lazy"
+                    decoding="async" width="400" height="400">
                 </div>
                 <div class="slide">
-                  <img
-                    src="./assets/images/Vanusa-comfundo-praia-02.jpeg"
-                    alt="Biquini Moda Praia"
-                    loading="lazy"
-                    decoding="async"
-                    width="400"
-                    height="400">
+                  <img src="./assets/images/Vanusa-comfundo-praia-02.jpeg" alt="Biquini Moda Praia" loading="lazy"
+                    decoding="async" width="400" height="400">
                 </div>
                 <div class="slide">
-                  <img
-                    src="./assets/images/Vanusa-comfundo-praia-03.jpeg"
-                    alt="Biquini Moda Praia"
-                    loading="lazy"
-                    decoding="async"
-                    width="400"
-                    height="400">
+                  <img src="./assets/images/Vanusa-comfundo-praia-03.jpeg" alt="Biquini Moda Praia" loading="lazy"
+                    decoding="async" width="400" height="400">
                 </div>
                 <div class="slide">
-                  <img
-                    src="./assets/images/Vanusa-comfundo-praia-04.jpeg"
-                    alt="Biquini Moda Praia"
-                    loading="lazy"
-                    decoding="async"
-                    width="400"
-                    height="400">
+                  <img src="./assets/images/Vanusa-comfundo-praia-04.jpeg" alt="Biquini Moda Praia" loading="lazy"
+                    decoding="async" width="400" height="400">
                 </div>
                 <!--End Slide images-->
 
@@ -486,40 +453,20 @@
 
                 <!--Slides images-->
                 <div class="slide first">
-                  <img
-                    src="./assets/images/Vanusa-comfundo-fitness-01.jpeg"
-                    alt="Top Moda Fitness"
-                    loading="lazy"
-                    decoding="async"
-                    width="400"
-                    height="400">
+                  <img src="./assets/images/Vanusa-comfundo-fitness-01.jpeg" alt="Top Moda Fitness" loading="lazy"
+                    decoding="async" width="400" height="400">
                 </div>
                 <div class="slide">
-                  <img
-                    src="./assets/images/Vanusa-comfundo-fitness-02.jpeg"
-                    alt="Top Moda Fitness"
-                    loading="lazy"
-                    decoding="async"
-                    width="400"
-                    height="400">
+                  <img src="./assets/images/Vanusa-comfundo-fitness-02.jpeg" alt="Top Moda Fitness" loading="lazy"
+                    decoding="async" width="400" height="400">
                 </div>
                 <div class="slide">
-                  <img
-                    src="./assets/images/Vanusa-comfundo-fitness-03.jpeg"
-                    alt="Top Moda Fitness"
-                    loading="lazy"
-                    decoding="async"
-                    width="400"
-                    height="400">
+                  <img src="./assets/images/Vanusa-comfundo-fitness-03.jpeg" alt="Top Moda Fitness" loading="lazy"
+                    decoding="async" width="400" height="400">
                 </div>
                 <div class="slide">
-                  <img
-                    src="./assets/images/Vanusa-comfundo-fitness-02.jpeg"
-                    alt="Top Moda Fitness"
-                    loading="lazy"
-                    decoding="async"
-                    width="400"
-                    height="400">
+                  <img src="./assets/images/Vanusa-comfundo-fitness-02.jpeg" alt="Top Moda Fitness" loading="lazy"
+                    decoding="async" width="400" height="400">
                 </div>
                 <!--End Slide images-->
 
@@ -638,14 +585,8 @@
       </div>
       <div class="line"></div>
       <div class="logo elementFlex">
-        <img
-          src="./assets/images/Design sem nome (2) (1).png"
-          alt="Logo Shallow"
-          class="center-image"
-          loading="lazy"
-          decoding="async"
-          width="200"
-          height="auto">
+        <img src="./assets/images/Design sem nome (2) (1).png" alt="Logo Shallow" class="center-image" loading="lazy"
+          decoding="async" width="200" height="auto">
       </div>
       <div class="line"></div>
       <div class="redes">
@@ -666,11 +607,7 @@
   <footer class="rodape mobile-footer">
     <div class="at-rs">
       <div class="logo elementFlex">
-        <img
-          src="./assets/images/Design sem nome (2) (1).png"
-          alt="Logo Shallow"
-          class="center-image"
-          loading="lazy"
+        <img src="./assets/images/Design sem nome (2) (1).png" alt="Logo Shallow" class="center-image" loading="lazy"
           decoding="async">
       </div>
       <div class="atendimento">
