--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </iframe>
               </div>
             </div>
-            <a href="./form/" class="btn" onclick="mostrarFormulario()"><!--Botão Animado-->
+            <a class="btn" onclick="mostrarFormulario()"><!--Botão Animado-->
               <span>Seja uma revendedora Shallow</span>
             </a>
             <span class="elementFlex">Clique no botão acima</span>
