--- a/form/index.html
+++ b/form/index.html
@@ -97,31 +97,72 @@
       </form>
     </div>
   </section>
+  <div id="toast-container" class="toast-container"></div>
 </body>
 <script>
+  function showToast(message, type = 'success') {
+    const toast = document.createElement('div');
+    toast.className = `toast ${type}`;
+    toast.innerText = message;
+  
+    document.getElementById('toast-container').appendChild(toast);
+  
+    setTimeout(() => {
+      toast.remove();
+    }, 4000); // mesmo tempo da animação
+  }
+  
   document.getElementById('info-form').addEventListener('submit', async function (e) {
     e.preventDefault();
-
+  
     const form = e.target;
-    const nome = form.name.value;
-    const email = form.email.value;
-    const dddPais = form['country-code'].value;
-    const telefone = dddPais + form.number.value;
-
-    const resposta = await fetch('https://api-shallow.onrender.com/api/enviar', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ nome, email, telefone })
-    });
-
-    if (resposta.ok) {
-      window.location.href = '../obrigado';
-      form.reset();
-    } else {
-      alert('Erro ao enviar os dados!');
+    const nome = form.name.value.trim();
+    const email = form.email.value.trim();
+    const dddPais = form['country-code'].value.trim();
+    const numero = form.number.value.trim();
+    const telefone = dddPais + numero;
+  
+    const emailValido = /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
+    const numeroValido = /^\d{8,15}$/.test(numero);
+  
+    if (!nome || !email || !numero) {
+      showToast('Por favor, preencha todos os campos obrigatórios.', 'error');
+      return;
+    }
+  
+    if (!emailValido) {
+      showToast('E-mail inválido. Verifique e tente novamente.', 'error');
+      return;
+    }
+  
+    if (!numeroValido) {
+      showToast('Número de telefone inválido.', 'error');
+      return;
+    }
+  
+    try {
+      const resposta = await fetch('https://api-shallow.onrender.com/api/enviar', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ nome, email, telefone })
+      });
+  
+      if (resposta.ok) {
+        form.reset();
+        showToast('Inscrição realizada com sucesso!', 'success');
+        setTimeout(() => {
+          window.location.href = '../obrigado';
+        }, 1500);
+      } else {
+        const erro = await resposta.json();
+        showToast(erro.erro || 'Erro ao enviar os dados. Tente novamente mais tarde.', 'error');
+      }
+  
+    } catch (err) {
+      showToast('Erro de conexão com o servidor. Verifique sua internet ou tente mais tarde.', 'error');
     }
   });
-
-</script>
+  </script>
+  
 
 </html>
