--- a/index.html
+++ b/index.html
@@ -504,64 +504,36 @@
         <div class="container-faq">
           <input type="checkbox" id="abrir-question-1">
           <label for="abrir-question-1" class="faq-item active-1"><!--PERGUNTA 1-->
-            <p>Preciso pagar alguma taxa de adesão para começar?</p><i class="fa-solid fa-chevron-right"></i>
+            <p>A Shallow trabalha com condicional?</p><i class="fa-solid fa-chevron-right"></i>
           </label>
           <div class="faq-answer-1 resposta faq-answer">
-            <p>Sim, trabalhamos com empresas de diversos tamanhos e setores. Adaptamos nossas estratégias
-              para atender às necessidades específicas de cada cliente, seja uma pequena empresa local ou
-              uma grande corporação.
+            <p>Não. Nosso sistema de compras no atacado, conta com compra mínima de 10 peças por segmento.
             </p>
           </div>
           <input type="checkbox" id="abrir-question-2">
           <label for="abrir-question-2" class="faq-item active-2"><!--PERGUNTA 2-->
-            <p>É necessário comprar um estoque inicial? Se sim, qual o valor mínimo?</p><i
-              class="fa-solid fa-chevron-right"></i>
+            <p>Vocês fazem dropshipping?</p><i class="fa-solid fa-chevron-right"></i>
           </label>
           <div class="faq-answer-2 resposta faq-answer">
-            <p>Cada projeto é tratado de forma única, começando com uma análise detalhada das necessidades
-              do cliente. Desenvolvemos soluções sob medida, seja no design de um site, na criação de uma
-              campanha de tráfego pago ou na implementação de estratégias de SEO. Nosso objetivo é
-              garantir que cada cliente receba um serviço que realmente se alinhe com sua identidade e
-              objetivos de negócio.
+            <p>Sempre priorizamos cada revendedora ter seu estoque físico. Isso ajuda a não perder vendas, tendo a
+              disposição imediata para as clientes. Por isso, não trabalhamos com dropshipping
             </p>
           </div>
           <input type="checkbox" id="abrir-question-3">
           <label for="abrir-question-3" class="faq-item active-3"><!--PERGUNTA 3-->
-            <p>A Shallow oferece algum suporte para as revendedoras, como treinamentos ou materiais de venda?</p><i
-              class="fa-solid fa-chevron-right"></i>
+            <p>Como funciona pra ser exclusiva na minha cidade?</p><i class="fa-solid fa-chevron-right"></i>
           </label>
           <div class="faq-answer-3 resposta faq-answer">
-            <p>O custo dos nossos serviços varia de acordo com as necessidades e complexidade de cada
-              projeto. Na Conecta Marketing, acreditamos em oferecer soluções personalizadas que se
-              ajustam ao seu orçamento e objetivos específicos. Para fornecer uma estimativa precisa,
-              consideramos fatores como:
-              <br>
-              -Tipo de Serviço. <br>
-              -Escopo do Projeto. <br>
-              -Duração e Manutenção. <br>
-              -Nível de Personalização.
+            <p>Para ser exclusiva na sua cidade, temos uma compra mínima mensal. Para isso, entre em contato com a
+              Shallow, para fazermos a análise pra sua cidade.
             </p>
           </div>
           <input type="checkbox" id="abrir-question-4">
           <label for="abrir-question-4" class="faq-item active-4"><!--PERGUNTA 4-->
-            <p>Posso trocar peças que não forem vendidas?</p><i class="fa-solid fa-chevron-right"></i>
+            <p>Recebo treinamento pra revender os produtos?</p><i class="fa-solid fa-chevron-right"></i>
           </label>
           <div class="faq-answer-4 resposta faq-answer">
-            <p>Sim, oferecemos suporte contínuo para garantir que todas as soluções implementadas continuem
-              a funcionar corretamente e sejam otimizadas conforme necessário. Isso inclui atualizações,
-              manutenção e monitoramento regular para responder rapidamente a qualquer problema ou
-              necessidade de ajuste.
-            </p>
-          </div>
-          <input type="checkbox" id="abrir-question-5">
-          <label for="abrir-question-5" class="faq-item active-5 margin"><!--PERGUNTA 5-->
-            <p>Os produtos possuem garantia?</p><i class="fa-solid fa-chevron-right"></i>
-          </label>
-          <div class="faq-answer-5 resposta faq-answer">
-            <p>Sim, oferecemos serviços de gestão de redes sociais que incluem planejamento de conteúdo,
-              criação de posts, engajamento com a audiência e análise de desempenho. Nosso objetivo é
-              aumentar sua presença nas redes sociais e promover interações significativas com seu
-              público.
+            <p>A equipe de atendimento às revendedoras, conta com um plano bem elaborado, onde você vai ser assessorada e tirar todas as suas dúvidas. Contamos também com grupo exclusivo no WhatsApp, onde enviamos conteúdos semanais e explicações sobre as peças desenvolvidas.
             </p>
           </div>
         </div>
